# GitCrisp

./: .gitignore  CLAUDE.md  GitCrisp.spec  GitStack.spec  README.md  installer.iss  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: _config.yml
docs/_layouts/: default.html
docs/_site/: index.html
git_gui/: logging_setup.py  resources.py
git_gui/application/: commands.py  queries.py
git_gui/domain/: entities.py  ports.py
git_gui/infrastructure/: commit_ops_cli.py  git_clone.py  pygit2_repo.py  remote_tag_cache.py  repo_store.py  submodule_cli.py
git_gui/presentation/: bus.py  main_window.py
tests/: conftest.py  test_logging_setup.py  test_main_validation.py  test_resources.py
tests/application/: test_commands.py  test_commands_branches.py  test_commands_cherry_pick_revert_reset.py  test_commands_remote_submodule.py  test_queries.py  test_queries_branches.py  test_queries_remote_submodule.py
tests/domain/: test_entities.py  test_entities_local_branch_info.py  test_entities_remote_submodule.py  test_ports.py
tests/infrastructure/: test_commit_ops_cli.py  test_discard.py  test_hunk_staging.py  test_pygit2_repo_branches.py  test_pygit2_repo_remotes.py  test_pygit2_repo_reset.py  test_pygit2_repo_submodules.py  test_reads.py  test_remote_tag_cache.py  test_repo_store.py  test_submodule_cli.py  test_untracked_diff.py  test_writes.py
tests/presentation/: test_diff_model.py  test_graph_model.py  test_main_window_checkout_conflict.py  test_main_window_session_factory.py  test_working_tree_model.py
(+156 files in other folders)
