[project]
name = "gitcrisp"
version = "0.1.0"
description = "A clean, focused Git GUI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygit2>=1.19.2,<2",
    "pyside6>=6.11.0,<7",
    "pygments>=2.17",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
    "pyinstaller>=6.0",
]
